--- a/Index.html
+++ b/Index.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Website</title>
-  <link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>Интернет магазин</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <h1>Your project</h1>
-    <p>Web Developer in Training</p>
-  </header>
+    <header>
+        <h1>Магазин товаров</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Товари</a></li>
+                <li><a href="#">Главная</a></li>
+                <li><a href="#"></a>Контакты</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="products">
+            <h2>Наши товари</h2>
+            <div class="product- card">
+                <img src="../img.1.jpg" alt="">
+                <h3>Товари 1</h3>
+                <p>Описание товари 1</p>
+                <p class="price">Цена:100 сомони</p>
+                <button>Купить</button>
+            </div>
+            <div class="product-card">
+                
+                <img src="../img.1.jpg" alt="">
+
+    <h3>Товар 2</h3>
+    <p>Описание Товара 2</p>
+    <p class="price">Цена:150 сомони </p>
+    <button>Купить</button>
+</div>
+        </section>
+    </main>
+    <footer>
+        <p>2025 Интернет-иагазин.Все права зашищены</p>
+    </footer>
 </body>
 </html>
